5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1596_2894.log
== TEST (2019-03-21 18:45:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:53:37) 
-- CODE:
numero=int(input("digite um número:    "))
centena=numero//100
resto=numero%100
dezena=resto//10
unidade=resto%10
print(centena)
print(dezena)
print(unidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero=int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:53:52) 
-- CODE:
numero=int(input("digite um numero:    "))
centena=numero//100
resto=numero%100
dezena=resto//10
unidade=resto%10
print(centena)
print(dezena)
print(unidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero=int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:55:31) 
-- CODE:
numero=int(input("digite um numero:    "))
centena=numero//100
resto=numero%100
dezena=resto//10
unidade=resto%10
print(centena)
print(dezena)
print(unidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero=int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:55:44) 
-- CODE:
numero=int(input("digite um numero:    "))
centena=numero//100
resto=numero%100
dezena=resto//10
unidade=resto%10
print(centena)
print(dezena)
print(unidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero=int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:59:08) 
-- CODE:
numero=int(input("digite um numero:    "))
centena=numero//100
resto=numero%100
dezena=resto//10
unidade=resto%10
print(centena)
print(dezena)
print(unidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero=int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:01:18) 
-- CODE:
numero=int(input("digite um numero:    "))
centena=numero//100
resto=numero%100
dezena=resto//10
unidade=resto%10
print(centena)
print(dezena)
print(unidade)
-- EXECUTION TIME:
0.174936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 1, in <module>
    numero=int(input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:01:14) 
-- CODE:
numero=int(input("digite um numero:    "))
centena=numero//100
resto=numero%100
dezena=resto//10
unidade=resto%10
print(centena)
print(dezena)
print(unidade)
-- EXECUTION TIME:
0.143437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 1, in <module>
    numero=int(input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:08:04) 
-- CODE:
a=float(input("digite o valor do jogo:    ))
a=a*8
				  f=45
				  p=f*a
				  print(p)
-- EXECUTION TIME:
0.178021
-- ERROR:
  File "/home/codebench/codes/1596/2894/main.py", line 1
    a=float(input("digite o valor do jogo:    ))
                                               ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:33) 
-- CODE:
j=float(input("digite o valor do jogo:    ))
j=a*8
f=45
p=f*j
print(p)
-- ERROR:
File "XXXX", line 1
    j=float(input("digite o valor do jogo:    ))
                                               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:08:45) 
-- CODE:
j=float(input("digite o valor do jogo:    "))
j=a*8
f=45
p=f*j
print(p)
-- EXECUTION TIME:
0.202127
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 2, in <module>
    j=a*8
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:46) 
-- CODE:
j=float(input("digite o valor do jogo:    "))
j=a*8
f=45
p=f*j
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    j=a*8
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:09:06) 
-- CODE:
j=float(input("digite o valor do jogo:    "))
j=j*8
f=45
p=f*j
print(p)
-- EXECUTION TIME:
0.135884
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
442.8
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
128160.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
44635320.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:09:07) 
-- CODE:
j=float(input("digite o valor do jogo:    "))
j=j*8
f=45
p=f*j
print(p)
-- OUTPUT:
442.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:09:15) 
-- CODE:
j=float(input("digite o valor do jogo:    "))
j=j*8
f=45
p=f*j
print(p)
-- EXECUTION TIME:
0.152728
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
442.8
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
128160.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
44635320.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:09:26) 
-- CODE:
j=float(input("digite o valor do jogo:    "))
j=j*8
f=45
p=f+j
print(p)
-- EXECUTION TIME:
0.130574
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:09:27) 
-- CODE:
j=float(input("digite o valor do jogo:    "))
j=j*8
f=45
p=f+j
print(p)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:10:06) 
-- CODE:
j=float(input("digite o valor do jogo:    "))
j=j*8
f=45
p=f+j
print(p)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
